kubernetes/yaml/canary/04argorollout/canary-ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shark 
spec:
  rules:
  - host: shark.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: shark 
            port:
              number: 80
